# particle-system

./: CMakeLists.txt  README.md
include/: game.h  particle_system.h  utils.h  window.h
src/: game.cpp  main.cpp  particle_system.cpp  utils.cpp  window.cpp
